[package]
name = "martensite-db"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Evgeniy Pshenitsin <geneopenminder@gmail.com>"]

[dependencies]
rand = "0.8.5"
libc = "0.2"
memmap2 = "0.9.7"
lazy_static = "1.5.0"
signal-hook = "0.3.18"
dashmap = "6.1.0"
sqlparser = "0.9.0"
httparse = "1.10.1"
skiplist = "0.6.0"

hex = "0.4.3"
urlencoding = "2.1.3"
anyhow = "1.0.100"
crc32c = "0.6"

nix = "0.30.1"
getrandom = "0.3.4"

"faiss" = { version = "0.12.1"}

[profile.release]
opt-level = 3

[profile.dev]
debug = true

[profile.test]
debug = true

[build]
rustflags = ["-C", "link-arg=-L/usr/local/lib"]